Added UserID to tasks and  linked SQL tables
