# internal/models/user.go
@@ -1,11 +1,10 @@
-package userService
+package models
 
-import (
-	"gorm.io/gorm"
-)
+import "gorm.io/gorm"
 
 type User struct {
 	gorm.Model
 	Email    string `gorm:"column:email" json:"email"`
 	Password string `gorm:"column:password" json:"password"`
+	Tasks    []Task
 }
