# openapi/openapi.yaml
@@ -110,6 +110,26 @@ paths:
               schema:
                 $ref: "#/components/schemas/User"
   /users/{id}:
+    get:
+      summary: Get all tasks for user by ID
+      tags:
+        - users
+      operationId: GetTasksByUserID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: A list of user's tasks
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Task"
     patch:
       summary: Update a user by ID
       tags:
@@ -163,6 +183,9 @@ components:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: integer
+          format: uint
     User:
       type: object
       properties:
@@ -173,3 +196,7 @@ components:
           type: string
         password:
           type: string
+        tasks: 
+          type: array 
+          items:
+            $ref: '#/components/schemas/Task'
